# openweather-api

./: .gitignore  Cargo.toml
src/: current.rs  forecast.rs  lib.rs  onecall.rs  units.rs
