[package]
authors = ["Tim Park"]
name = "openweather-api"
repository = "https://github.com/timfpark/openweather-api"
description = "OpenWeather API"
edition = "2021"
license = "MIT"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14", features = ["macros", "rt", "rt-multi-thread"] }
